--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
       - name: SwiftLint
         run: |
-          .scripts/swift_lint.sh
+          ./scripts/swift_lint.sh
       - name: Set Default Scheme
         run: |
           scheme_list=$(xcodebuild -list -json | tr -d "\n")
