--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install and Run SwiftLint
         run: |
-          brew install swiftlint |
-          ./scripts/swift_lint.sh
+          brew install swiftlint | ./scripts/swift_lint.sh
       - name: Set Default Scheme
         run: |
           scheme_list=$(xcodebuild -list -json | tr -d "\n")
